remove obsolete files and coverlet examples (initial commit)

--- a/src/Calculator/Calculator.Client/Calculator.Client.csproj
+++ b/src/Calculator/Calculator.Client/Calculator.Client.csproj
@@ -1,6 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net10.0</TargetFramework>
         <OutputType>Exe</OutputType>
         <NoWarn>$(NoWarn);CA1303</NoWarn>
     </PropertyGroup>
@@ -11,5 +11,16 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Calculator.SharedLib\Calculator.SharedLib.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageVersion Update="SonarAnalyzer.CSharp" Version="10.18.0.131500" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Update="SonarAnalyzer.CSharp">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 </Project>
