--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,17 +32,11 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
-          source-url: ${{ env.AZURE_ARTIFACTS_FEED_URL }}
-        env:
-          NUGET_AUTH_TOKEN: ${{ secrets.AZURE_DEVOPS_TOKEN }}
 
-      - name: Setup dotnet 9.0
+      - name: Setup dotnet 10.0
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.0.100-rc.1.24452.12'
-          source-url: ${{ env.AZURE_ARTIFACTS_FEED_URL }}
-        env:
-          NUGET_AUTH_TOKEN: ${{ secrets.AZURE_DEVOPS_TOKEN }}
+          dotnet-version: '10.0.101'
 
       - name: Restore dependencies
         run: dotnet restore
@@ -66,7 +60,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        framework: ['net8.0', 'net9.0']
+        framework: ['net10.0']
     timeout-minutes: 30
 
     steps:
@@ -75,10 +69,10 @@ jobs:
         with:
           fetch-depth: 0 # avoid shallow clone so nbgv can do its work.
 
-      - name: Setup dotnet 9.0
+      - name: Setup dotnet 10.0
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.0.100-rc.1.24452.12'
+          dotnet-version: '10.0.101'
           source-url: ${{ env.AZURE_ARTIFACTS_FEED_URL }}
         env:
           NUGET_AUTH_TOKEN: ${{ secrets.AZURE_DEVOPS_TOKEN }}
@@ -87,7 +81,7 @@ jobs:
         run: dotnet test --framework ${{ matrix.framework }} --verbosity normal --collect:"XPlat Code Coverage" --logger trx --results-directory coverage
 
       - name: ReportGenerator
-        uses: danielpalme/ReportGenerator-GitHub-Action@5.4.5
+        uses: danielpalme/ReportGenerator-GitHub-Action@5.5.1
         with:
           reports: ./coverage/**/coverage.cobertura.xml
           assemblyfilters: -xunit*
