--- a/nuget.config
+++ b/nuget.config
@@ -2,24 +2,24 @@
 <configuration>
   <packageSources>
     <clear />
-    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     <add key="coverlet-nightly" value="https://pkgs.dev.azure.com/tonerdo/coverlet/_packaging/coverlet-nightly/nuget/v3/index.json" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     <!--<add key="intern" value="https://pkgs.dev.azure.com/bertk0374/_packaging/intern/nuget/v3/index.json"--> />
     <!--<add key="local-folder" value="C:\local_source" />-->
-    <add key="dotnet-libraries" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-libraries/nuget/v3/index.json" />
+    <!--<add key="dotnet-libraries" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-libraries/nuget/v3/index.json" />-->
   </packageSources>
   
   <!-- Define mappings by adding package patterns beneath the target source. -->
   <packageSourceMapping>
     <!-- key value for <packageSource> should match key values from <packageSources> element -->
+    <packageSource key="coverlet-nightly">
+      <package pattern="coverlet*" />
+    </packageSource>
     <packageSource key="nuget.org">
       <package pattern="*" />
     </packageSource>
-    <packageSource key="dotnet-libraries">
+    <!--<packageSource key="dotnet-libraries">
       <package pattern="System.CommandLine*" />
-    </packageSource>
-    <!--<packageSource key="intern">
-      <package pattern="DotNetDev.ArcadeLight*" />
     </packageSource>-->
   </packageSourceMapping>
 </configuration>
