--- a/src/Calculator/Calculator.ServiceHost/Calculator.ServiceHost.csproj
+++ b/src/Calculator/Calculator.ServiceHost/Calculator.ServiceHost.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,6 +10,17 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Calculator.ServiceLib\Calculator.ServiceLib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageVersion Update="SonarAnalyzer.CSharp" Version="10.18.0.131500" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="SonarAnalyzer.CSharp">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
