--- a/src/Calculator/Calculator.ServiceLib/Calculator.ServiceLib.csproj
+++ b/src/Calculator/Calculator.ServiceLib/Calculator.ServiceLib.csproj
@@ -8,4 +8,15 @@
     <ProjectReference Include="..\Calculator.SharedLib\Calculator.SharedLib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageVersion Update="SonarAnalyzer.CSharp" Version="10.18.0.131500" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="SonarAnalyzer.CSharp">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
