--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,9 @@
 version: 2
 
 registries:
-  nuget-azure-devops:
+  coverlet-azure-devops:
     type: nuget-feed
-    url: https://pkgs.dev.azure.com/bertk0374/_packaging/intern/nuget/v3/index.json
-    token: '${{secrets.AZURE_DEVOPS_TOKEN}}:'
+    url: https://pkgs.dev.azure.com/tonerdo/coverlet/_packaging/coverlet-nightly/nuget/v3/index.json
 
 updates:
   - package-ecosystem: "nuget"
@@ -13,7 +12,10 @@ updates:
       interval: "monthly"
     open-pull-requests-limit: 20
     registries:
-      - nuget-azure-devops
+      - coverlet-azure-devops
+    labels:
+      - "type: dependencies"
+      - ".NET"
 
   - package-ecosystem: "github-actions"
     directory: "/"
