Modernize solution: .NET 10, test infra, coverage, CI
- Centralize target frameworks via MSBuild properties
- Standardize DebugType, OutputType, and build settings
- Migrate test projects to coverlet.MTP and xunit.v3.mtp-v2
- Remove redundant test SDK and runner references
- Add IsTestProject and TestingPlatformShowTestsFailure for diagnostics
- Update .editorconfig to 2-space indent, fix duplicates
- Refactor GitHub Actions to use global.json and new coverage paths
- Add workflow to solution folder structure
- Clean up project files and references for consistency
- Fix command line test helper for new output structure
- Ensure all projects follow unified conventions for easier maintenance

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Setup dotnet 10.0
         uses: actions/setup-dotnet@v5
         with:
-          dotnet-version: '10.0.101'
+          global-json-file: './global.json'
 
       - name: Restore dependencies
         run: dotnet restore
@@ -70,15 +70,16 @@ jobs:
       - name: Setup dotnet 10.0
         uses: actions/setup-dotnet@v5
         with:
-          dotnet-version: '10.0.101'
+          global-json-file: './global.json'
 
       - name: Tests
-        run: dotnet test --framework ${{ matrix.framework }} --verbosity normal --collect:"XPlat Code Coverage" --logger trx --results-directory coverage
+        run: dotnet test --solution SampleSolution.slnx --report-xunit-trx --framework ${{ matrix.framework }} --verbosity normal --coverlet --coverlet-output-format cobertura --diagnostic --diagnostic-verbosity trace
+        # run: dotnet test --framework ${{ matrix.framework }} --verbosity normal --collect:"XPlat Code Coverage" --logger trx --results-directory coverage
 
       - name: ReportGenerator
         uses: danielpalme/ReportGenerator-GitHub-Action@5.5.1
         with:
-          reports: ./coverage/**/coverage.cobertura.xml
+          reports: ./artifacts/**/coverage.cobertura.xml
           assemblyfilters: -xunit*
           targetdir: ./artifacts/CoverageReport
           reporttypes: HtmlInline;Cobertura;MarkdownSummaryGithub
