--- a/src/Calculator/Calculator.ServiceHost/Calculator.ServiceHost.csproj
+++ b/src/Calculator/Calculator.ServiceHost/Calculator.ServiceHost.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
+    <TargetFramework>$(NetCurrent)</TargetFramework>
+    <DebugType>portable</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
