--- a/src/NewTypes/NewTypes/NewTypes.csproj
+++ b/src/NewTypes/NewTypes/NewTypes.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <NoWarn>$(NoWarn);CA1515</NoWarn>
-    <TargetFrameworks>net10.0;net9.0</TargetFrameworks>
+    <TargetFrameworks>$(NetMinimum);$(NetCurrent)</TargetFrameworks>
   </PropertyGroup>
   
   <ItemGroup>
