--- a/src/NewTypes/NewTypesTests/NewTypes.Tests.csproj
+++ b/src/NewTypes/NewTypesTests/NewTypes.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net10.0;net9.0</TargetFrameworks>
+    <TargetFrameworks>$(NetMinimum);$(NetCurrent)</TargetFrameworks>
     <IsPackable>false</IsPackable>
 
     <NoWarn>$(NoWarn);NU1504;NU1507;CS1591</NoWarn>
@@ -12,31 +12,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" />
-      <PackageReference Include="xunit.v3.mtp-v2" />
-      <PackageReference Include="xunit.runner.visualstudio">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-      </PackageReference>
-      <PackageReference Include="coverlet.MTP">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-      </PackageReference>
+    <PackageReference Include="xunit.v3.mtp-v2" />
+    <PackageReference Include="coverlet.MTP" />
   </ItemGroup>
 
-    <ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="../NewTypes/NewTypes.csproj" />
   </ItemGroup>
-
-    <ItemGroup>
-      <PackageVersion Update="SonarAnalyzer.CSharp" Version="10.18.0.131500" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Update="SonarAnalyzer.CSharp">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-      </PackageReference>
-    </ItemGroup>
 
 </Project>
