--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,13 +3,12 @@
 
 name: .NET
 
-on: [workflow_dispatch]
-
-# on:
-#   push:
-#     branches: [ "main" ]
-#   pull_request:
-#     branches: [ "main" ]
+# on: [workflow_dispatch]
+on:
+ push:
+   branches: [ "main" ]
+ pull_request:
+   branches: [ "main" ]
 
 
 jobs:
