Remove obsolete Razor Pages and associated test files, including AppDbContext, Message model, and various page components. Clean up project structure by deleting unused settings and configuration files.

--- a/src/ConsoleApp/ConsoleApp.csproj
+++ b/src/ConsoleApp/ConsoleApp.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <InternalsVisibleTo Include="SampleConsoleAppTest" />
+    <InternalsVisibleTo Include="ConsoleAppTest" />
   </ItemGroup>
 
   <ItemGroup>
