--- a/test/ConsoleApp.Tests/ConsoleApp.Tests.csproj
+++ b/test/ConsoleApp.Tests/ConsoleApp.Tests.csproj
@@ -21,6 +21,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="ConsoleAppTest" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\src\ConsoleApp\ConsoleApp.csproj" />
   </ItemGroup>
 
