--- a/test/XUnitProject2.Tests/XUnitProject2.Tests.csproj
+++ b/test/XUnitProject2.Tests/XUnitProject2.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>$(NetCurrent)</TargetFramework>
+    <TargetFrameworks>$(NetMinimum);$(NetCurrent)</TargetFrameworks>
     <DebugType>portable</DebugType>
     <OutputType>Exe</OutputType>
     <IsPackable>false</IsPackable>
