Add test coverage report paths to workflow

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -113,3 +113,6 @@ jobs:
             ./artifacts/**/*.opencover.xml
             ./artifacts/**/*.cobertura.xml
             ./artifacts/**/*.coverage.json
+            ./test/**/*.opencover.xml
+            ./test/**/*.cobertura.xml
+            ./test/**/*.coverage.json
