Update Coverlet version to 8.0.0-preview.32 and remove obsolete test report paths

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,7 +3,7 @@
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
     <XunitV3Version>3.2.2</XunitV3Version>
     <XunitRunnerVisualstudioVersion>3.1.5</XunitRunnerVisualstudioVersion>
-    <CoverletVersion>8.0.0-preview.29.g70d4633089</CoverletVersion>
+    <CoverletVersion>8.0.0-preview.32.gcf90a5ef67</CoverletVersion>
   </PropertyGroup>
   <ItemGroup>
     <GlobalPackageReference Include="SonarAnalyzer.CSharp" Version="10.18.0.131500" />
