Add Calculate class, --calculate option, and unit tests
Introduced a new Calculate class with static methods for add, subtract, multiply, and divide operations, each logging their results. Updated Program.cs to support a --calculate command-line option, invoking the appropriate calculation based on user input. Added xUnit tests for all operations, including edge cases, and updated the project to allow test access to internal members.

--- a/src/ConsoleApp/ConsoleApp.csproj
+++ b/src/ConsoleApp/ConsoleApp.csproj
@@ -24,4 +24,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="ConsoleApp.Tests" />
+  </ItemGroup>
+
 </Project>
