Update CoverletVersion to 8.0.0-g449264873d (#12)
* Update CoverletVersion to 8.0.0-g449264873d

* Update Google.Protobuf version to 3.33.5

* Add Calculate class, --calculate option, and unit tests

Introduced a new Calculate class with static methods for add, subtract, multiply, and divide operations, each logging their results. Updated Program.cs to support a --calculate command-line option, invoking the appropriate calculation based on user input. Added xUnit tests for all operations, including edge cases, and updated the project to allow test access to internal members.

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,7 +3,7 @@
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
     <XunitV3Version>3.2.2</XunitV3Version>
     <XunitRunnerVisualstudioVersion>3.1.5</XunitRunnerVisualstudioVersion>
-    <CoverletVersion>8.0.0-g615d3bf1b8</CoverletVersion>
+    <CoverletVersion>8.0.0-g449264873d</CoverletVersion>
   </PropertyGroup>
   <ItemGroup>
     <GlobalPackageReference Include="SonarAnalyzer.CSharp" Version="10.19.0.132793" />
@@ -13,7 +13,7 @@
     <PackageVersion Include="coverlet.MTP" Version="$(CoverletVersion)" />
     <PackageVersion Include="coverlet.msbuild" Version="$(CoverletVersion)" />
     <PackageVersion Include="coverlet.collector" Version="$(CoverletVersion)" />
-    <PackageVersion Include="Google.Protobuf" Version="3.33.4" />
+    <PackageVersion Include="Google.Protobuf" Version="3.33.5" />
     <PackageVersion Include="Grpc.AspNetCore" Version="2.76.0" />
     <PackageVersion Include="Grpc.Net.Client" Version="2.76.0" />
     <PackageVersion Include="Grpc.Tools" Version="2.76.0" />
